# front-apps-manager

./: Cargo.toml  README.md
src/: main.rs
src/domain/: entities.rs  mod.rs
src/domain/use_cases/: list_micro_frontends.rs  mod.rs
